# kuzya_bot

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/kuzya_bot/include/kuzya_bot/kuzya_bot/: diffbot_system.hpp
install/kuzya_bot/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: kuzya_bot
install/kuzya_bot/share/ament_index/resource_index/package_run_dependencies/: kuzya_bot
install/kuzya_bot/share/ament_index/resource_index/parent_prefix_path/: kuzya_bot
install/kuzya_bot/share/kuzya_bot/: kuzya_bot.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kuzya_bot/share/kuzya_bot/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_kuzya_botExport-noconfig.cmake  export_kuzya_botExport.cmake  kuzya_botConfig-version.cmake  kuzya_botConfig.cmake
install/kuzya_bot/share/kuzya_bot/config/: diffbot_controllers.yaml
install/kuzya_bot/share/kuzya_bot/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/kuzya_bot/share/kuzya_bot/launch/: diffbot.launch.py  view_robot.launch.py
install/kuzya_bot/share/kuzya_bot/ros2_control/: diffbot.ros2_control.xacro
install/kuzya_bot/share/kuzya_bot/urdf/: diffbot.urdf.xacro
install/kuzya_bot_description/share/ament_index/resource_index/package_run_dependencies/: kuzya_bot_description
install/kuzya_bot_description/share/ament_index/resource_index/parent_prefix_path/: kuzya_bot_description
install/kuzya_bot_description/share/kuzya_bot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/kuzya_bot_description/share/kuzya_bot_description/cmake/: kuzya_bot_descriptionConfig-version.cmake  kuzya_bot_descriptionConfig.cmake
install/kuzya_bot_description/share/kuzya_bot_description/diffbot/rviz/: diffbot.rviz  diffbot_view.rviz
install/kuzya_bot_description/share/kuzya_bot_description/diffbot/urdf/: diffbot.materials.xacro  diffbot_description.urdf.xacro
install/kuzya_bot_description/share/kuzya_bot_description/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/kuzya_bot/: CMakeLists.txt  kuzya_bot.xml  package.xml
src/kuzya_bot/bringup/config/: diffbot_controllers.yaml
src/kuzya_bot/bringup/launch/: diffbot.launch.py
src/kuzya_bot/description/launch/: view_robot.launch.py
src/kuzya_bot/description/ros2_control/: diffbot.ros2_control.xacro
src/kuzya_bot/description/urdf/: diffbot.urdf.xacro  diffbot_description.urdf.xacro
src/kuzya_bot/hardware/: diffbot_system.cpp
src/kuzya_bot/hardware/include/kuzya_bot/: controller_comms.hpp  diffbot_system.hpp  visibility_control.h  wheel.hpp
src/kuzya_bot/test/: test_diffbot_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
src/kuzya_bot_description/: CMakeLists.txt  package.xml
src/kuzya_bot_description/diffbot/urdf/: diffbot_description.urdf.xacro
